feat: 添加系统架构文档和容器化部署配置
添加了 SYSTEM_ARCHITECTURE.md 文档，详细描述了系统的整体架构、各层设计、操作模型、
部署拓扑和开发约定。同时添加了完整的 Docker Compose 配置，实现前端、后端和数据库的
容器化部署。

BREAKING CHANGE:
- 压力测试相关API响应结构发生变化